--- a/test.ipynb
+++ b/test.ipynb
@@ -7,32 +7,45 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "price_history_df = pd.read_csv(\"blockchain_data/blockchain_data/price_history_array_050521_102922.csv\")"
+    "price_history_df = pd.read_csv(\"blockchain_data/blockchain_data/price_history_array_050521_102922.csv\")\n",
+    "total_liquidity = pd.read_csv(\"blockchain_data/blockchain_data/total_liquidity_array_050521_102922.csv\")\n",
+    "volume = pd.read_csv(\"blockchain_data/blockchain_data/volume_array_050521_102922.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(price_history_df)"
+    "def tick2Price(tick):\n",
+    "        rawprice = 1.0001**tick\n",
+    "        return (10 ** (18 - 6)) / rawprice"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13008, 289)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -56,194 +69,234 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Hour</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
+       "      <th>191340</th>\n",
+       "      <th>191400</th>\n",
+       "      <th>191460</th>\n",
+       "      <th>191520</th>\n",
+       "      <th>191580</th>\n",
+       "      <th>191640</th>\n",
+       "      <th>191700</th>\n",
+       "      <th>191760</th>\n",
+       "      <th>191820</th>\n",
        "      <th>...</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
+       "      <th>207960</th>\n",
+       "      <th>208020</th>\n",
+       "      <th>208080</th>\n",
+       "      <th>208140</th>\n",
+       "      <th>208200</th>\n",
+       "      <th>208260</th>\n",
+       "      <th>208320</th>\n",
+       "      <th>208380</th>\n",
+       "      <th>208440</th>\n",
+       "      <th>208500</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1620338400</td>\n",
-       "      <td>3474.791265</td>\n",
-       "      <td>3483.248694</td>\n",
-       "      <td>3491.884808</td>\n",
-       "      <td>3470.718198</td>\n",
-       "      <td>3455.822146</td>\n",
-       "      <td>3457.357175</td>\n",
-       "      <td>3407.356727</td>\n",
-       "      <td>3424.183462</td>\n",
+       "      <td>1.620256e+09</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
+       "      <td>2.538149e+13</td>\n",
        "      <td>...</td>\n",
-       "      <td>3504.442358</td>\n",
-       "      <td>3538.594662</td>\n",
-       "      <td>3564.574686</td>\n",
-       "      <td>3565.055348</td>\n",
-       "      <td>3459.730461</td>\n",
-       "      <td>3474.723140</td>\n",
-       "      <td>3457.365888</td>\n",
-       "      <td>3504.959753</td>\n",
-       "      <td>3522.685901</td>\n",
-       "      <td>3485.844843</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
+       "      <td>1.431659e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1620342000</td>\n",
-       "      <td>3483.248694</td>\n",
-       "      <td>3491.884808</td>\n",
-       "      <td>3470.718198</td>\n",
-       "      <td>3455.822146</td>\n",
-       "      <td>3457.357175</td>\n",
-       "      <td>3407.356727</td>\n",
-       "      <td>3424.183462</td>\n",
-       "      <td>3442.141615</td>\n",
+       "      <td>1.620259e+09</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
+       "      <td>3.834678e+13</td>\n",
        "      <td>...</td>\n",
-       "      <td>3538.594662</td>\n",
-       "      <td>3564.574686</td>\n",
-       "      <td>3565.055348</td>\n",
-       "      <td>3459.730461</td>\n",
-       "      <td>3474.723140</td>\n",
-       "      <td>3457.365888</td>\n",
-       "      <td>3504.959753</td>\n",
-       "      <td>3522.685901</td>\n",
-       "      <td>3485.844843</td>\n",
-       "      <td>3510.378780</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1620345600</td>\n",
-       "      <td>3491.884808</td>\n",
-       "      <td>3470.718198</td>\n",
-       "      <td>3455.822146</td>\n",
-       "      <td>3457.357175</td>\n",
-       "      <td>3407.356727</td>\n",
-       "      <td>3424.183462</td>\n",
-       "      <td>3442.141615</td>\n",
-       "      <td>3450.970580</td>\n",
+       "      <td>1.620263e+09</td>\n",
+       "      <td>3.979259e+13</td>\n",
+       "      <td>3.979259e+13</td>\n",
+       "      <td>3.987426e+13</td>\n",
+       "      <td>3.987426e+13</td>\n",
+       "      <td>3.987426e+13</td>\n",
+       "      <td>3.987426e+13</td>\n",
+       "      <td>3.987426e+13</td>\n",
+       "      <td>3.987426e+13</td>\n",
+       "      <td>3.987426e+13</td>\n",
        "      <td>...</td>\n",
-       "      <td>3564.574686</td>\n",
-       "      <td>3565.055348</td>\n",
-       "      <td>3459.730461</td>\n",
-       "      <td>3474.723140</td>\n",
-       "      <td>3457.365888</td>\n",
-       "      <td>3504.959753</td>\n",
-       "      <td>3522.685901</td>\n",
-       "      <td>3485.844843</td>\n",
-       "      <td>3510.378780</td>\n",
-       "      <td>3468.342720</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1620349200</td>\n",
-       "      <td>3470.718198</td>\n",
-       "      <td>3455.822146</td>\n",
-       "      <td>3457.357175</td>\n",
-       "      <td>3407.356727</td>\n",
-       "      <td>3424.183462</td>\n",
-       "      <td>3442.141615</td>\n",
-       "      <td>3450.970580</td>\n",
-       "      <td>3519.856568</td>\n",
+       "      <td>1.620266e+09</td>\n",
+       "      <td>3.980675e+13</td>\n",
+       "      <td>3.980675e+13</td>\n",
+       "      <td>3.988842e+13</td>\n",
+       "      <td>3.988842e+13</td>\n",
+       "      <td>3.988842e+13</td>\n",
+       "      <td>3.988842e+13</td>\n",
+       "      <td>3.988842e+13</td>\n",
+       "      <td>3.988842e+13</td>\n",
+       "      <td>3.988842e+13</td>\n",
        "      <td>...</td>\n",
-       "      <td>3565.055348</td>\n",
-       "      <td>3459.730461</td>\n",
-       "      <td>3474.723140</td>\n",
-       "      <td>3457.365888</td>\n",
-       "      <td>3504.959753</td>\n",
-       "      <td>3522.685901</td>\n",
-       "      <td>3485.844843</td>\n",
-       "      <td>3510.378780</td>\n",
-       "      <td>3468.342720</td>\n",
-       "      <td>3419.408290</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
+       "      <td>4.076083e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1620352800</td>\n",
-       "      <td>3455.822146</td>\n",
-       "      <td>3457.357175</td>\n",
-       "      <td>3407.356727</td>\n",
-       "      <td>3424.183462</td>\n",
-       "      <td>3442.141615</td>\n",
-       "      <td>3450.970580</td>\n",
-       "      <td>3519.856568</td>\n",
-       "      <td>3507.845719</td>\n",
+       "      <td>1.620270e+09</td>\n",
+       "      <td>5.148935e+13</td>\n",
+       "      <td>5.148935e+13</td>\n",
+       "      <td>5.157102e+13</td>\n",
+       "      <td>5.157102e+13</td>\n",
+       "      <td>5.157102e+13</td>\n",
+       "      <td>5.157102e+13</td>\n",
+       "      <td>5.157102e+13</td>\n",
+       "      <td>5.157102e+13</td>\n",
+       "      <td>5.157102e+13</td>\n",
        "      <td>...</td>\n",
-       "      <td>3459.730461</td>\n",
-       "      <td>3474.723140</td>\n",
-       "      <td>3457.365888</td>\n",
-       "      <td>3504.959753</td>\n",
-       "      <td>3522.685901</td>\n",
-       "      <td>3485.844843</td>\n",
-       "      <td>3510.378780</td>\n",
-       "      <td>3468.342720</td>\n",
-       "      <td>3419.408290</td>\n",
-       "      <td>3424.902830</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
+       "      <td>4.076441e+12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 288 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0        Hour            0            1            2            3  \\\n",
-       "0           0  1620338400  3474.791265  3483.248694  3491.884808  3470.718198   \n",
-       "1           1  1620342000  3483.248694  3491.884808  3470.718198  3455.822146   \n",
-       "2           2  1620345600  3491.884808  3470.718198  3455.822146  3457.357175   \n",
-       "3           3  1620349200  3470.718198  3455.822146  3457.357175  3407.356727   \n",
-       "4           4  1620352800  3455.822146  3457.357175  3407.356727  3424.183462   \n",
+       "           Hour        191340        191400        191460        191520  \\\n",
+       "0  1.620256e+09  2.538149e+13  2.538149e+13  2.538149e+13  2.538149e+13   \n",
+       "1  1.620259e+09  3.834678e+13  3.834678e+13  3.834678e+13  3.834678e+13   \n",
+       "2  1.620263e+09  3.979259e+13  3.979259e+13  3.987426e+13  3.987426e+13   \n",
+       "3  1.620266e+09  3.980675e+13  3.980675e+13  3.988842e+13  3.988842e+13   \n",
+       "4  1.620270e+09  5.148935e+13  5.148935e+13  5.157102e+13  5.157102e+13   \n",
        "\n",
-       "             4            5            6            7  ...           14  \\\n",
-       "0  3455.822146  3457.357175  3407.356727  3424.183462  ...  3504.442358   \n",
-       "1  3457.357175  3407.356727  3424.183462  3442.141615  ...  3538.594662   \n",
-       "2  3407.356727  3424.183462  3442.141615  3450.970580  ...  3564.574686   \n",
-       "3  3424.183462  3442.141615  3450.970580  3519.856568  ...  3565.055348   \n",
-       "4  3442.141615  3450.970580  3519.856568  3507.845719  ...  3459.730461   \n",
+       "         191580        191640        191700        191760        191820  ...  \\\n",
+       "0  2.538149e+13  2.538149e+13  2.538149e+13  2.538149e+13  2.538149e+13  ...   \n",
+       "1  3.834678e+13  3.834678e+13  3.834678e+13  3.834678e+13  3.834678e+13  ...   \n",
+       "2  3.987426e+13  3.987426e+13  3.987426e+13  3.987426e+13  3.987426e+13  ...   \n",
+       "3  3.988842e+13  3.988842e+13  3.988842e+13  3.988842e+13  3.988842e+13  ...   \n",
+       "4  5.157102e+13  5.157102e+13  5.157102e+13  5.157102e+13  5.157102e+13  ...   \n",
        "\n",
-       "            15           16           17           18           19  \\\n",
-       "0  3538.594662  3564.574686  3565.055348  3459.730461  3474.723140   \n",
-       "1  3564.574686  3565.055348  3459.730461  3474.723140  3457.365888   \n",
-       "2  3565.055348  3459.730461  3474.723140  3457.365888  3504.959753   \n",
-       "3  3459.730461  3474.723140  3457.365888  3504.959753  3522.685901   \n",
-       "4  3474.723140  3457.365888  3504.959753  3522.685901  3485.844843   \n",
+       "         207960        208020        208080        208140        208200  \\\n",
+       "0  1.431659e+12  1.431659e+12  1.431659e+12  1.431659e+12  1.431659e+12   \n",
+       "1  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12   \n",
+       "2  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12   \n",
+       "3  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12   \n",
+       "4  4.076441e+12  4.076441e+12  4.076441e+12  4.076441e+12  4.076441e+12   \n",
        "\n",
-       "            20           21           22           23  \n",
-       "0  3457.365888  3504.959753  3522.685901  3485.844843  \n",
-       "1  3504.959753  3522.685901  3485.844843  3510.378780  \n",
-       "2  3522.685901  3485.844843  3510.378780  3468.342720  \n",
-       "3  3485.844843  3510.378780  3468.342720  3419.408290  \n",
-       "4  3510.378780  3468.342720  3419.408290  3424.902830  \n",
+       "         208260        208320        208380        208440        208500  \n",
+       "0  1.431659e+12  1.431659e+12  1.431659e+12  1.431659e+12  1.431659e+12  \n",
+       "1  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  \n",
+       "2  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  \n",
+       "3  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  4.076083e+12  \n",
+       "4  4.076441e+12  4.076441e+12  4.076441e+12  4.076441e+12  4.076441e+12  \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "[5 rows x 288 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "price_history_df.head()"
+    "total_liquidity.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4904.840002274622"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tick2Price(191340)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "881.8866618412868"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tick2Price(208500)\n"
    ]
   },
   {
